GNOME Bugzilla – Bug 697919
network: deleting a vlan doesn't work
Last modified: 2013-04-15 12:16:12 UTC
the minus button is sensitive when a vlan is selected, but clicking on it has no effect
Created attachment 241424 [details] [review] network: Add remote settings to virtual devices This will be used in the next commit to delete the remote connection.
Created attachment 241425 [details] [review] network: Make it possible to delete virtual devices Bridges, bonds and vlans should be deletable, like they are in nm-connection-editor. The delete button was already sensitive for these devices, but it didn't do anything. This commit hooks up the necessary functionality.
Review of attachment 241424 [details] [review]: ++
Review of attachment 241425 [details] [review]: Looks good.
Attachment 241424 [details] pushed as 51f5dec - network: Add remote settings to virtual devices Attachment 241425 [details] pushed as dffb46e - network: Make it possible to delete virtual devices