network: Add remote settings to virtual devices

This will be used in the next commit to delete the remote
connection.
https://bugzilla.gnome.org/show_bug.cgi?id=697919